--- a/Seite2.html
+++ b/Seite2.html
@@ -5,8 +5,8 @@
 </head>
     hier gibt es nix zu sehen
     <p>
-        <a href="./HelloWorld.html">
-            Zurück
+        <a href="./helloworld.html">
+            ZurÃ¼ck
         </a>
     </p>
 
