--- a/helloworld.html
+++ b/helloworld.html
@@ -51,5 +51,6 @@
         Seite nächste
     </a>
 </p>
+<p>für diese Seite verantwortlich: Oliver Gurmann, gurmann.oliver@htleisensstadt.at</p>
 </body>
 </html>
